fix: update styling and hide image in history on small devices

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -32,7 +32,7 @@
     @apply border-transparent hover:text-zinc-600 hover:border-zinc-300 dark:hover:text-zinc-300 dark:hover:border-zinc-700;
   }
   .cq-tab-active {
-    @apply text-violet-600 border-violet-600 dark:text-violet-500 dark:border-violet-500;
+    @apply text-violet-500 border-violet-500 dark:text-violet-500 dark:border-violet-500;
   }
   .cq-input {
     @apply block w-full px-4 py-2 disabled:opacity-50 disabled:cursor-not-allowed text-zinc-500 dark:text-zinc-500 bg-white dark:bg-zinc-900 bg-clip-padding border-2 border-solid border-zinc-300 dark:border-zinc-700 rounded-lg transition ease-in-out m-0 focus:text-zinc-700 focus:border-violet-500 focus:outline-none dark:focus:text-zinc-200 dark:focus:border-violet-500 dark:focus:outline-none;
